Replace prompt with button inputs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
 
   <main>
-
+    <section>
+        <button id="0">Rock</button>
+        <button id="1">Paper</button>
+        <button id="2">Scissors</button>
+    </section>
   </main>
 
   <script type="text/javascript" src="./main.js">
