Make the choice labels dynamically swappable

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <main>
     <section>
-        <button id="0">Rock</button>
-        <button id="1">Paper</button>
-        <button id="2">Scissors</button>
+        <button id="0">A</button>
+        <button id="1">B</button>
+        <button id="2">C</button>
     </section>
   </main>
 
