--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 <body>
 
   <main>
-    <section>
+    <section id="playerChoicesContainer">
         <button id="0">A</button>
         <button id="1">B</button>
         <button id="2">C</button>
     </section>
+    <section id="outputContainer">
+      <p></p>
+    </section>
   </main>
 
-  <script type="text/javascript" src="./main.js">
-
-  </script>
+  <script type="text/javascript" src="./view.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
 </body>
