Display match outcomes in the output box

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
       </section>
 
       <section id="playerChoicesContainer">
-          <button id="0" class="game-box">
+          <button id="0" class="game-box small">
             <p>A</p>
           </button>
-          <button id="1" class="game-box">
+          <button id="1" class="game-box small">
             <p>B</p>
           </button>
-          <button id="2" class="game-box">
+          <button id="2" class="game-box small">
             <p>C</p>
           </button>
       </section>
 
       <section id="outputContainer" class="game-box">
-        
+
       </section>
 
     </section>
