Working 5p algo in the console

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
   <main>
     <section>
-        <button id="0">A</button>
-        <button id="1">B</button>
-        <button id="2">C</button>
+        <button id="1">A</button>
+        <button id="2">B</button>
+        <button id="3">C</button>
+        <button id="4">D</button>
+        <button id="5">E</button>
     </section>
   </main>
 
