Display scores that change dynamically as player scores do

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     </section>
     <section id="screen">
 
-      <section id="battlefield" class="hidden game-box">
-      </section>
 
       <section id="mode-select" class="">
         <button id="simple-mode" class="game-box">
@@ -26,10 +24,21 @@
         </button>
       </section>
 
+      <section id="computer-score-container" class="hidden">
+        <p>Score: 0</p>
+      </section>
+
+      <section id="battlefield" class="hidden game-box">
+      </section>
+
       <section id="user-choices-container" class="hidden">
           <button id="example-choice-button" class="game-box small hidden">
             <p>Example Label</p>
           </button>
+      </section>
+
+      <section id="user-score-container" class="hidden">
+        <p>Score: 0</p>
       </section>
 
       <section id="dialogue-container" class="hidden game-box">
