Fix flexbox so that mode select and pokemon choice buttons are properly centered in both simple and complex modes

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     <section id="screen">
 
 
-      <section id="mode-select" class="">
-        <button id="simple-mode" class="game-box">
-          <h2>Simple Mode</h2>
-        </button>
+      <section id="mode-select-screen" class="">
+        <section id="mode-select-buttons">
+          <button id="simple-mode" class="game-box">
+            <h2>Simple Mode</h2>
+          </button>
 
-        <button id="complex-mode" class="game-box">
-          <h2>Complex Mode</h2>
-        </button>
+          <button id="complex-mode" class="game-box">
+            <h2>Complex Mode</h2>
+          </button>
+        </section>
       </section>
 
       <section id="computer-score-container" class="hidden">
