--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <meta charset="utf-8">
   <link rel="stylesheet" href="./style.css">
   <title>Rock Paper Scissors</title>
 
